--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.0.0",
+    "@ckeditor/ckeditor5-react": "^9.4.0",
     "@hookform/resolvers": "^3.4.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
