--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 GENERATE_SOURCEMAP=false
-VITE_BASE_API_URL=https://api.onemorelottery.tw:8081
-VITE_BASE_API_URL2=https://api.onemorelottery.tw:8080/api
-VITE_BASE_API_URL3=https://api.onemorelottery.tw:8080
-VITE_OAUTH2_REDIRECT_URI=https://onemorelottery.tw/oauth2/redirect
+VITE_BASE_API_URL=https://staging.d2q5f9gm22u1qb.amplifyapp.com:8081
+VITE_BASE_API_URL2=https://staging.d2q5f9gm22u1qb.amplifyapp.com:8080/api
+VITE_BASE_API_URL3=https://staging.d2q5f9gm22u1qb.amplifyapp.com
+VITE_OAUTH2_REDIRECT_URI=https://staging.d2q5f9gm22u1qb.amplifyapp.com/oauth2/redirect
 
-VITE_PAYMENT_GATEWAY_URL=https://n.gomypay.asia/TestShuntClass.aspx
-VITE_PAYMENT_CUSTOMER_ID=B82FD0DF7DE03FC702DEC35A2446E469
+; VITE_PAYMENT_GATEWAY_URL=https://n.gomypay.asia/TestShuntClass.aspx
+; VITE_PAYMENT_CUSTOMER_ID=B82FD0DF7DE03FC702DEC35A2446E469
