--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build-force": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -29,7 +29,7 @@
     "sass": "^1.77.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.5",
-    "yup": "^1.5.0",
+    "yup": "^1.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
